# amardeep-assignment

./: README.md
ASSIGNMENT1/: Cargo.toml
ASSIGNMENT1/src/: dept.rs  emp.rs  leave.rs  main.rs  sal.rs
ASSIGNMENT2/: Cargo.toml  build.rs
ASSIGNMENT2/src/: main.rs  prog1.rs  prog2.rs
ASSIGNMENT2/src/protos/: Persons.proto
