[package]
name = "assignment2"
version = "0.1.0"
edition = "2021"
authors=["Amardeep"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
protobuf = { version = "3", features = ["with-bytes"] }

[build-dependencies]
protobuf-codegen = "3"
protoc-rust = "^2.0"